harbor/svc-harbor-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: harbor
    meta.helm.sh/release-namespace: harbor
  labels:
    app: harbor
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: harbor
    app.kubernetes.io/part-of: harbor
    app.kubernetes.io/version: 2.12.2
    chart: harbor
    heritage: Helm
    release: harbor
  name: harbor-registry
  namespace: harbor
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http-registry
    nodePort: 31500
    port: 5000
    protocol: TCP
    targetPort: 5000
  - name: http-controller
    nodePort: 31228
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: harbor
    component: registry
    release: harbor
  sessionAffinity: None
  type: NodePort
