harbor/allow-harbor-internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal-harbor-traffic
  namespace: harbor
spec:
  podSelector: {}  
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
